# line-qrcode-login

./: .gitignore  LICENSE  README.md  a.py  pyproject.toml  talk.thrift
line/: login.py
talk/: LoginPermitNoticeService-remote  LoginPermitNoticeService.py  SecondaryQrCodeLoginService-remote  SecondaryQrCodeLoginService.py  __init__.py  ttypes.py
