[tool.poetry]
name = "line-qrcode-login"
version = "0.1.0"
description = ""
authors = ["4masaka <in9lude@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
thrift = "^0.13.0"
httpx = "^0.12.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
